/**
 * User Type Definitions
 * Types for users in the property cleaning scheduler
 */

/**
 * Valid user roles in the system
 */
export type UserRole = 'owner' | 'admin' | 'cleaner';

/**
 * User settings interface (nested structure)
 */
export interface UserSettings {
  notifications: boolean;
  timezone: string;
  theme: 'light' | 'dark' | 'system';
  language: string;
}

/**
 * Base User interface
 * Core data model for all users - supports both flattened and nested settings
 */
export interface User {
  id: string;
  email: string;
  name: string;
  role: UserRole; // Database column is 'role'
  company_name?: string; // for property owners
  
  // Contact and verification fields
  address?: string;
  city?: string;
  state?: string;
  zip_code?: string;
  phone?: string;
  email_verified?: boolean;
  
  // User preferences
  date_format?: string;
  
  // Flattened settings (primary - matches database schema)
  notifications_enabled: boolean;
  timezone: string;
  theme: 'light' | 'dark' | 'system';
  language: string;
  
  // Nested settings (for backward compatibility)
  settings?: UserSettings;
  
  // Admin-specific fields
  access_level?: string;
  
  // Cleaner-specific fields
  skills?: string[];
  max_daily_bookings?: number;
  location?: { lat: number; lng: number; };
  location_lat?: number;
  location_lng?: number;
  
  created_at?: string;
  updated_at?: string;
  last_sign_in_at?: string;
}

/**
 * Property Owner user
 * Has properties that need cleaning
 */
export interface PropertyOwner extends User {
  role: 'owner';
  company_name?: string;
  // Ensure settings compatibility
  notifications_enabled: boolean;
  timezone: string;
  theme: 'light' | 'dark' | 'system';
  language: string;
  settings?: UserSettings;
}

/**
 * Admin user
 * Manages the cleaning company
 */
export interface Admin extends User {
  role: 'admin';
  access_level: 'full' | 'limited';
  // Ensure settings compatibility
  notifications_enabled: boolean;
  timezone: string;
  theme: 'light' | 'dark' | 'system';
  language: string;
  settings?: UserSettings;
}

/**
 * Cleaner user
 * Performs the actual cleaning work
 */
export interface Cleaner extends User {
  role: 'cleaner';
  skills: string[];
  max_daily_bookings: number;
  location_lat?: number;
  location_lng?: number;
  // Ensure settings compatibility and location support
  notifications_enabled: boolean;
  timezone: string;
  theme: 'light' | 'dark' | 'system';
  language: string;
  settings?: UserSettings;
  City?: string;// For useCleanerManagement compatibility
}

/**
 * Type guard for PropertyOwner
 */
export function isPropertyOwner(user: User): user is PropertyOwner {
  return user.role === 'owner';
}

/**
 * Type guard for Admin
 */
export function isAdmin(user: User): user is Admin {
  return user.role === 'admin';
}

/**
 * Type guard for Cleaner
 */
export function isCleaner(user: User): user is Cleaner {
  return user.role === 'cleaner';
}
